--- a/pmose-portfolio/src/containers/Portfolio/Portfolio.module.css
+++ b/pmose-portfolio/src/containers/Portfolio/Portfolio.module.css
@@ -1,37 +1,68 @@
-.Left{
-    float: left; 
-    width: 50%;
-    height:100vh;
-    background-color:black;
-}
-
-.Right{
-    float: right; 
-    width: 50%;
-    background-color:white;
-    height:100vh;
-}
-
-.Bubble{
-    position: fixed;
-    left: 50%;
-    height: 50vh;
-    width: 50vh;
+.Circle{
+    background: white;
+    width: 25vh;
+    height: 25vh;
+    margin: 12.5vh;
     border-radius: 50%;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    transform: translate(-50%, 0);
 }
 
-.Bubble2{
-    position: fixed;
-    left: 50%;
-    height: 50vh;
-    width: 50vh;
-    border-radius: 50%;
-    background-color: black;
-    margin-left: auto;
-    margin-right: auto;
-    transform: translate(-50%, 100%);
+.Intro{
+    margin-left:8%;
+    margin-top:5%;
+    width: 60%;
+    float: left;
+    z-index: 2;
+    font-size: 3.5vh;
+    position:relative;
+    font-family: 'Merriweather'
+}
+
+.Intro > a {
+    font-weight: 500;
+    color: #009DDF !important;
+}
+
+.Description{
+    color: rgba(35,36,38,0.8);
+    margin-left: 15%;
+    margin-top: 22%;
+    position:relative;
+    font-size: 2vh;
+    width: 55%;
+    z-index: 2;
+
+    font-family: 'Merriweather'
+}
+
+.WorkPlaces{
+    margin:15% 0px 0px 23%;
+    float:left;
+    width:35%;
+    text-align: center;
+}
+
+.BubbleImage{
+    padding:12.5vh;
+}
+
+.TmLogo{
+    width:50%;
+    height:100%
+}
+
+.TmLogo:hover > g{
+    fill:rgba(127, 127, 127, 1);
+}
+
+.IsuLogo{
+    width:50%;
+    margin: 20px 0px 20px 0px;
+}
+
+.IsuLogo > g{
+    fill: rgb(80, 80, 80);
+}
+
+.IsuLogo:hover > g {
+    fill: rgb(0, 0, 0);
 }
