Contact draft && Resume fin  && warning cleanup

--- a/pmose-portfolio/src/components/Bubble/Bubble.module.css
+++ b/pmose-portfolio/src/components/Bubble/Bubble.module.css
@@ -26,6 +26,14 @@
     transform: translate(-50%, 300%);
 }
 
+.Five{
+    transform: translate(-50%, 400%);
+}
+
+.Six{
+    transform: translate(-50%, 500%);
+}
+
 .Black{
     background-color:black;
     color:white;
