--- a/pmose-portfolio/src/containers/Portfolio/Intro/Intro.module.css
+++ b/pmose-portfolio/src/containers/Portfolio/Intro/Intro.module.css
@@ -6,12 +6,13 @@
     z-index: 2;
     font-size: 24px;
     position:block;
-    font-family: 'Merriweather'
+    font-family: 'Merriweather';
 }
 
 .Intro > span {
     font-weight: 500;
     color: #009DDF !important;
+    font-family: 'Merriweather';
 }
 
 .Description{
