--- a/pmose-portfolio/src/containers/Portfolio/SkillLinks/SkillLinks.module.css
+++ b/pmose-portfolio/src/containers/Portfolio/SkillLinks/SkillLinks.module.css
@@ -3,9 +3,8 @@
 }
 
 .Links{
-    padding-top:5%;
-    margin-top: 12.50%;
-    margin-left: 40%;
+    margin-top: 23%;
+    margin-left: 43%;
     margin-right: 35%;
     display: flex;
     justify-content: space-between;
@@ -20,12 +19,20 @@
 }
 
 .Skills{
-    margin: 20% 0px 5% 50%;
-    font-size: 20px;
+    margin: 22% 0px 5% 52%;
+    font-size: 26px;
 }
 
 .SkillDescription{
-    margin-left:5%;
+    margin-left:12%;
     display: flex;
     justify-content: center;
+    font-size:25px;
+}
+
+@media (min-width: 1750px) {
+
+    .Skills{
+        margin: 30% 0px 5% 52%;
+    }
 }
