--- a/pmose-portfolio/src/index.css
+++ b/pmose-portfolio/src/index.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  font-family: 'Merriweather', serif;
+  font-family: 'Open Sans', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
