--- a/pmose-portfolio/src/containers/Portfolio/Contact/Contact.module.css
+++ b/pmose-portfolio/src/containers/Portfolio/Contact/Contact.module.css
@@ -8,7 +8,7 @@
 
 .ContactTitle{
     display:block;
-
+    margin-bottom: 10%;
     
 }
 
@@ -18,6 +18,10 @@
 
 .ContactList li{
     font-family: 'Open Sans';
+}
+
+.Contact ul {
+    margin-bottom:15%;
 }
 
 .EmailForm{
@@ -56,6 +60,10 @@ input:hover{
     border-width:2px;
     border-radius:6px;
     border-color: lightgrey;
+}
+
+textarea{
+    height:30%;
 }
 
 textarea:focus{
