Mobile Intro cleaned

--- a/pmose-portfolio/src/components/Bubble/Bubble.module.css
+++ b/pmose-portfolio/src/components/Bubble/Bubble.module.css
@@ -42,3 +42,10 @@
 .White{
     background-color:white;
 }
+
+@media (max-width: 500px){
+
+    .Two, .Three, .Four, .Five, .Six{
+        display:none;
+    }
+}
